==> Samsung/TizenRT/os/arch/arm/src/stm32h745/stm32h745_serial.c <==
#include <tinyara/config.h>
#include <stdint.h>
#include <tinyara/irq.h>
#include <tinyara/arch.h>
#include <tinyara/serial/serial.h>
#include <arch/serial.h>
#include <arch/board/board.h>
#include "up_internal.h"
#include "up_arch.h"
#include "chip.h"
#include <stm32h7xx_hal.h>
#include <stm32h7xx_ll_rcc.h>
#include <stm32h7xx_ll_bus.h>
#include <stm32h7xx_ll_gpio.h>
#include <stm32h7xx_ll_usart.h>
#include <system_stm32h745.h>
  #define CONSOLE_DEV             g_uart2             /* USART2 is console */
  #define TTYS0_DEV               g_uart3             /* USART3 is ttyS0 */
  #define TTYS1_DEV               g_uart6             /* USART6 is ttyS1 */
  #define CONSOLE_DEV             g_uart3             /* USART3 is console */
  #define TTYS0_DEV               g_uart2             /* USART2 is ttyS0 */
  #define TTYS1_DEV               g_uart6             /* USART6 is ttyS1 */
  #define CONSOLE_DEV             g_uart6             /* USART6 is console */
  #define TTYS0_DEV               g_uart2             /* USART2 is ttyS0 */
  #define TTYS1_DEV               g_uart3             /* USART3 is ttyS1 */

static int  stm32h745_up_setup(struct uart_dev_s *dev)
{
  struct stm32h745_up_dev_s *priv = (struct stm32h745_up_dev_s *)dev->priv;

  LL_USART_InitTypeDef     USART_InitStruct = {0};
  LL_GPIO_InitTypeDef      GPIO_InitStruct = {0};
  RCC_PeriphCLKInitTypeDef PeriphClkInitStruct = {0};

  if(priv->USART == USART3)
  {
    LL_RCC_SetUSARTClockSource(LL_RCC_USART234578_CLKSOURCE_PCLK1);

    /* Peripheral clock enable */
    LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_USART3);
    LL_AHB4_GRP1_EnableClock(LL_AHB4_GRP1_PERIPH_GPIOB);
    /**USART3 GPIO Configuration
    PB10   ------> USART3_TX
    PB11   ------> USART3_RX
    */
    GPIO_InitStruct.Pin = LL_GPIO_PIN_10|LL_GPIO_PIN_11;
    GPIO_InitStruct.Mode = LL_GPIO_MODE_ALTERNATE;
    GPIO_InitStruct.Speed = LL_GPIO_SPEED_FREQ_LOW;
    GPIO_InitStruct.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
    GPIO_InitStruct.Pull = LL_GPIO_PULL_NO;
    GPIO_InitStruct.Alternate = LL_GPIO_AF_7;
    LL_GPIO_Init(GPIOB, &GPIO_InitStruct);

    USART_InitStruct.PrescalerValue = LL_USART_PRESCALER_DIV1;
    USART_InitStruct.BaudRate = priv->baud;
    USART_InitStruct.DataWidth = LL_USART_DATAWIDTH_8B;
    USART_InitStruct.StopBits = LL_USART_STOPBITS_1;
    USART_InitStruct.Parity = LL_USART_PARITY_NONE;
    USART_InitStruct.TransferDirection = LL_USART_DIRECTION_TX_RX;
    USART_InitStruct.HardwareFlowControl = LL_USART_HWCONTROL_NONE;
    USART_InitStruct.OverSampling = LL_USART_OVERSAMPLING_16;
    LL_USART_Init(USART3, &USART_InitStruct);
    LL_USART_SetTXFIFOThreshold(USART3, LL_USART_FIFOTHRESHOLD_1_8);
    LL_USART_SetRXFIFOThreshold(USART3, LL_USART_FIFOTHRESHOLD_1_8);
    LL_USART_DisableFIFO(USART3);
    LL_USART_ConfigAsyncMode(USART3);

    LL_USART_Enable(USART3);

    /* Polling USART3 initialisation */
    while((!(LL_USART_IsActiveFlag_TEACK(USART3))) || (!(LL_USART_IsActiveFlag_REACK(USART3))))
    {
    }  
  }
  else if(priv->USART == USART2)
  {
    LL_RCC_SetUSARTClockSource(LL_RCC_USART234578_CLKSOURCE_PCLK1);

    /* Peripheral clock enable */
    LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_USART2);
    LL_AHB4_GRP1_EnableClock(LL_AHB4_GRP1_PERIPH_GPIOA);
    /**USART2 GPIO Configuration
    PA2   ------> USART2_TX
    PA3   ------> USART2_RX
    */
    GPIO_InitStruct.Pin = LL_GPIO_PIN_2|LL_GPIO_PIN_3;
    GPIO_InitStruct.Mode = LL_GPIO_MODE_ALTERNATE;
    GPIO_InitStruct.Speed = LL_GPIO_SPEED_FREQ_LOW;
    GPIO_InitStruct.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
    GPIO_InitStruct.Pull = LL_GPIO_PULL_NO;
    GPIO_InitStruct.Alternate = LL_GPIO_AF_7;
    LL_GPIO_Init(GPIOA, &GPIO_InitStruct);

    /* USER CODE BEGIN USART2_Init 1 */

    /* USER CODE END USART2_Init 1 */
    USART_InitStruct.PrescalerValue = LL_USART_PRESCALER_DIV1;
    USART_InitStruct.BaudRate = priv->baud;
    USART_InitStruct.DataWidth = LL_USART_DATAWIDTH_8B;
    USART_InitStruct.StopBits = LL_USART_STOPBITS_1;
    USART_InitStruct.Parity = LL_USART_PARITY_NONE;
    USART_InitStruct.TransferDirection = LL_USART_DIRECTION_TX_RX;
    USART_InitStruct.HardwareFlowControl = LL_USART_HWCONTROL_NONE;
    USART_InitStruct.OverSampling = LL_USART_OVERSAMPLING_16;
    LL_USART_Init(USART2, &USART_InitStruct);
    LL_USART_SetTXFIFOThreshold(USART2, LL_USART_FIFOTHRESHOLD_1_8);
    LL_USART_SetRXFIFOThreshold(USART2, LL_USART_FIFOTHRESHOLD_1_8);
    LL_USART_DisableFIFO(USART2);
    LL_USART_ConfigAsyncMode(USART2);

    /* USER CODE BEGIN WKUPType USART2 */

    /* USER CODE END WKUPType USART2 */

    LL_USART_Enable(USART2);

    /* Polling USART2 initialisation */
    while((!(LL_USART_IsActiveFlag_TEACK(USART2))) || (!(LL_USART_IsActiveFlag_REACK(USART2))))
    {
    }
  }
  else if(priv->USART == USART6)
  {
    LL_RCC_SetUSARTClockSource(LL_RCC_USART16_CLKSOURCE_PCLK2);

    /* Peripheral clock enable */
    LL_APB2_GRP1_EnableClock(LL_APB2_GRP1_PERIPH_USART6);
    LL_AHB4_GRP1_EnableClock(LL_AHB4_GRP1_PERIPH_GPIOG);
    /**USART6 GPIO Configuration
    PG9   ------> USART6_RX
    PG14   ------> USART6_TX
    */
    GPIO_InitStruct.Pin = LL_GPIO_PIN_9|LL_GPIO_PIN_14;
    GPIO_InitStruct.Mode = LL_GPIO_MODE_ALTERNATE;
    GPIO_InitStruct.Speed = LL_GPIO_SPEED_FREQ_LOW;
    GPIO_InitStruct.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
    GPIO_InitStruct.Pull = LL_GPIO_PULL_NO;
    GPIO_InitStruct.Alternate = LL_GPIO_AF_7;
    LL_GPIO_Init(GPIOG, &GPIO_InitStruct);

    /* USER CODE BEGIN USART6_Init 1 */

    /* USER CODE END USART6_Init 1 */
    USART_InitStruct.PrescalerValue = LL_USART_PRESCALER_DIV1;
    USART_InitStruct.BaudRate = priv->baud;
    USART_InitStruct.DataWidth = LL_USART_DATAWIDTH_8B;
    USART_InitStruct.StopBits = LL_USART_STOPBITS_1;
    USART_InitStruct.Parity = LL_USART_PARITY_NONE;
    USART_InitStruct.TransferDirection = LL_USART_DIRECTION_TX_RX;
    USART_InitStruct.HardwareFlowControl = LL_USART_HWCONTROL_NONE;
    USART_InitStruct.OverSampling = LL_USART_OVERSAMPLING_16;
    LL_USART_Init(USART6, &USART_InitStruct);
    LL_USART_SetTXFIFOThreshold(USART6, LL_USART_FIFOTHRESHOLD_1_8);
    LL_USART_SetRXFIFOThreshold(USART6, LL_USART_FIFOTHRESHOLD_1_8);
    LL_USART_DisableFIFO(USART6);
    LL_USART_ConfigAsyncMode(USART6);

    /* USER CODE BEGIN WKUPType USART6 */

    /* USER CODE END WKUPType USART6 */

    LL_USART_Enable(USART6);

    /* Polling USART6 initialisation */
    while((!(LL_USART_IsActiveFlag_TEACK(USART6))) || (!(LL_USART_IsActiveFlag_REACK(USART6))))
    {
    }
  }

  return OK;
}

static int stm32h745_up_attach(struct uart_dev_s *dev)
{
  int ret;
  struct stm32h745_up_dev_s *priv = (struct stm32h745_up_dev_s *)dev->priv;

  ret = irq_attach(priv->irq, up_interrupt, dev);
  if (ret == OK)
  {
    (void)up_enable_irq(priv->irq);
    /*
    * Removed to use default priority
    (void)up_prioritize_irq(priv->irq, NVIC_SYSH_PRIORITY_MIN);
    */
  }
  return ret;
}

static void stm32h745_up_detach(struct uart_dev_s *dev)
{
  struct stm32h745_up_dev_s *priv = (struct stm32h745_up_dev_s *)dev->priv;

  up_disable_irq(priv->irq);
  irq_detach(priv->irq);
}

static int  up_interrupt(int irq, void *context, FAR void *arg)
{
  bool handled;
  int  passes;

  FAR uart_dev_t *dev = (FAR uart_dev_t *)arg;
  struct stm32h745_up_dev_s *priv = (struct stm32h745_up_dev_s *)dev->priv;

  handled = true;

  for (passes = 0; passes < 256 && handled; passes++)
  {
    handled = false;

    if(LL_USART_IsActiveFlag_TXE_TXFNF(priv->USART) && 
      LL_USART_IsEnabledIT_TXE_TXFNF(priv->USART))
    {
      uart_xmitchars(dev);
      handled = true;
    }

    if(LL_USART_IsActiveFlag_RXNE_RXFNE(priv->USART) && 
      LL_USART_IsEnabledIT_RXNE_RXFNE(priv->USART))
    {
      uart_recvchars(dev);
      handled = true;
    }

    if(LL_USART_IsActiveFlag_TC(priv->USART) &&
      LL_USART_IsEnabledIT_TC(priv->USART))
    {
      LL_USART_ClearFlag_TC(priv->USART);
      LL_USART_DisableIT_TC(priv->USART);
    }

    if(LL_USART_IsActiveFlag_PE(priv->USART))
    {
      LL_USART_ClearFlag_PE(priv->USART);
    }

    if(LL_USART_IsActiveFlag_FE(priv->USART))
    {
      LL_USART_ClearFlag_FE(priv->USART);
    }

    if(LL_USART_IsActiveFlag_NE(priv->USART))
    {
      LL_USART_ClearFlag_NE(priv->USART);
    }

    if(LL_USART_IsActiveFlag_ORE(priv->USART))
    {
      LL_USART_ClearFlag_ORE(priv->USART);
    }
    
    if(LL_USART_IsActiveFlag_UDR(priv->USART))
    {
      LL_USART_ClearFlag_UDR(priv->USART);
    }
  }

  return OK;
}

static int  stm32h745_up_ioctl(FAR struct uart_dev_s *dev, int cmd, unsigned long arg)
{
  struct stm32h745_up_dev_s *priv = (struct stm32h745_up_dev_s *)dev->priv;

  lldbg("\n");

  return ERROR;
}

static int  stm32h745_up_receive(struct uart_dev_s *dev, unsigned int *status)
{
  struct stm32h745_up_dev_s *priv = (struct stm32h745_up_dev_s *)dev->priv;

  return (int)LL_USART_ReceiveData8(priv->USART);
}

static void stm32h745_up_rxint(struct uart_dev_s *dev, bool enable)
{
  struct stm32h745_up_dev_s *priv = (struct stm32h745_up_dev_s *)dev->priv;

  irqstate_t flags;
  flags = irqsave();

  if (enable)
  {
    LL_USART_EnableIT_RXNE_RXFNE(priv->USART);
    LL_USART_EnableIT_ERROR(priv->USART);
  }
  else
  {
    LL_USART_DisableIT_RXNE_RXFNE(priv->USART);
    LL_USART_DisableIT_ERROR(priv->USART);
  }

  irqrestore(flags);
}

static bool stm32h745_up_rxavailable(struct uart_dev_s *dev)
{
  struct stm32h745_up_dev_s *priv = (struct stm32h745_up_dev_s *)dev->priv;

  return (bool)LL_USART_IsActiveFlag_RXNE_RXFNE(priv->USART);
}

static void stm32h745_up_send(struct uart_dev_s *dev, int ch)
{
  struct stm32h745_up_dev_s *priv = (struct stm32h745_up_dev_s *)dev->priv;

  LL_USART_TransmitData8(priv->USART, (uint8_t)ch);
}

static void stm32h745_up_txint(struct uart_dev_s *dev, bool enable)
{
  struct stm32h745_up_dev_s *priv = (struct stm32h745_up_dev_s *)dev->priv;

  irqstate_t flags;
  flags = irqsave();

  if (enable)
  {
    LL_USART_EnableIT_TXE_TXFNF(priv->USART);
    LL_USART_EnableIT_ERROR(priv->USART);
  }
  else
  {
    LL_USART_DisableIT_TXE_TXFNF(priv->USART);
    LL_USART_DisableIT_ERROR(priv->USART);
  }

  irqrestore(flags);
}

static bool stm32h745_up_txready(struct uart_dev_s *dev)
{
  struct stm32h745_up_dev_s *priv = (struct stm32h745_up_dev_s *)dev->priv;

  return LL_USART_IsActiveFlag_TXE_TXFNF(priv->USART);
}

static bool stm32h745_up_txempty(struct uart_dev_s *dev)
{
  struct stm32h745_up_dev_s *priv = (struct stm32h745_up_dev_s *)dev->priv;

  return LL_USART_IsActiveFlag_TXE_TXFNF(priv->USART);
}
